--- a/eng/index.html
+++ b/eng/index.html
@@ -466,13 +466,13 @@
                                                 <div class='avia_textblock  av_inherit_color mp_flexbox' style='color:black;' itemprop="text" >
                                                     <div style="width: 48%; float: left;">
                                                         <!-- 뉴스 기사 링크 -->
-                                                        <a href="https://news.mt.co.kr/mtview.php?no=2022080116162495668" style="text-decoration-line: none;">
+                                                        <a href="https://www.etnews.com/20221010000106" style="text-decoration-line: none;">
                                                             <div>
                                                                 <img src="./image/smartbox_title.png" width="400px" style="margin:10px auto; text-align: center; display: block; border: 5px solid lightgrey;">
                                                             </div>
                                                             <div><br>
-                                                                <h4 style="letter-spacing: -1px; text-align: center;"> ‘Immersion Cooling’ Chosen by Alibaba and MS - the First Korean Start-up to Receive the K Mark</h4>
-                                                                <h6 style="text-align: center;">(Money Today)</h6>
+                                                                <h4 style="letter-spacing: -1px; text-align: center;"> Server heat. You can soak it in the whole thing</h4>
+                                                                <h6 style="text-align: center;">(etnews)</h6>
                                                             </div>
                                                         </a>
                                                     </div>
@@ -481,10 +481,10 @@
                                                     </div>
                                                     <div style="width: 39%; float: right;">
                                                         <div><br>
-                                                            <iframe width="620" height="320" src="https://www.youtube.com/embed/6clN2hDac9c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                                            <iframe width="620" height="320" src="https://youtu.be/12mh4ScKLL4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                                         </div>
                                                         <div><br>
-                                                            <h4>'Immersion Cooling' HP Blade Servers in SmartBox(KIER)</h4>
+                                                            <h4>Independent immersion cooling system tailored to the data center, SmartBox t0</h4>
                                                         </div>
 
                                                     </div>
