--- a/index.html
+++ b/index.html
@@ -470,13 +470,13 @@
                                                 <div class='avia_textblock  av_inherit_color mp_flexbox' style='color:black;' itemprop="text" >
                                                     <div style="width: 48%; float: left;">
                                                         <!-- 뉴스 기사 링크 -->
-                                                        <a href="https://news.mt.co.kr/mtview.php?no=2022080116162495668" style="text-decoration-line: none;">
+                                                        <a href="https://www.etnews.com/20221010000106" style="text-decoration-line: none;">
                                                             <div>
                                                                 <img src="./image/smartbox_title.png" width="400px" style="margin:10px auto; text-align: center; display: block; border: 5px solid lightgrey;">
                                                             </div>
                                                             <div><br>
-                                                                <h4 style="letter-spacing: -1px; text-align: center;">알리바바·MS가 택한 '침지냉각', 국내 첫 K마크 받은 스타트업</h4>
-                                                                <h6 style="text-align: center;">(머니 투데이)</h6>
+                                                                <h4 style="letter-spacing: -1px; text-align: center;">서버 발열, 통째로 담그면 됩니다.</h4>
+                                                                <h6 style="text-align: center;">(전자신문)</h6>
                                                             </div>
                                                         </a>
                                                     </div>
@@ -484,11 +484,11 @@
 
                                                     </div>
                                                     <div style="width: 39%; float: right;">
-                                                        <div><br>
-                                                            <iframe width="620" height="320" src="https://www.youtube.com/embed/6clN2hDac9c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                                        <div><br> 
+                                                            <iframe width="620" height="320" src="https://youtu.be/12mh4ScKLL4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                                         </div>
                                                         <div><br>
-                                                            <h4>'Immersion Cooling' HP Blade Servers in SmartBox(KIER)</h4>
+                                                            <h4>데이터센터에 맞춘 독립형 침지냉각시스템, SmartBox t0</h4>
                                                         </div>
                                                         
                                                     </div>
