--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
                                                     </div>
                                                     <div style="width: 39%; float: right;">
                                                         <div><br> 
-                                                            <iframe width="620" height="320" src="https://youtu.be/12mh4ScKLL4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                                            <iframe width="620" height="320" src="https://youtu.be/6clN2hDac9c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                                         </div>
                                                         <div><br>
                                                             <h4>데이터센터에 맞춘 독립형 침지냉각시스템, SmartBox t0</h4>
