youtube iframe update

--- a/eng/index.html
+++ b/eng/index.html
@@ -481,7 +481,7 @@
                                                     </div>
                                                     <div style="width: 39%; float: right;">
                                                         <div><br>
-                                                            <iframe width="620" height="320" src="https://youtu.be/6clN2hDac9c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                                            <iframe width="560" height="370" src="https://www.youtube.com/embed/12mh4ScKLL4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                                         </div>
                                                         <div><br>
                                                             <h4>Independent immersion cooling system tailored to the data center, SmartBox t0</h4>
