--- a/eng/header.html
+++ b/eng/header.html
@@ -4,7 +4,7 @@
     <div  id='header_main' class='container_wrap container_wrap_logo'>
         <div class='container av-logo-container'>
             <div class='inner-container'>
-                <div class='header_lan'><a href="/">Korea</a><a href="/eng">English</a></div>
+                <div class='header_lan'><a href="/">Korean</a> | <a href="/eng">English</a></div>
                 <strong class='logo'><a href='/eng'><img height='100' width='300' src='/eng/image/logomain.png' alt='DATABEAN' /><span class='subtext'><img src='/image/logowhite2.png' class='alternate' alt='' title='' /></span></a></strong>
                 <nav class='main_menu' data-selectname='Select a page'  role="navigation" itemscope="itemscope" itemtype="https://schema.org/SiteNavigationElement" >
                     <div class="avia-menu av-main-nav-wrap av_menu_icon_beside">
