--- a/header.html
+++ b/header.html
@@ -7,6 +7,7 @@
                 <strong class='logo'><a href='/'><img height='100' width='300' src='/image/logomain.png' alt='DATABEAN' /><span class='subtext'><img src='/image/logowhite2.png' class='alternate' alt='' title='' /></span></a></strong>
                 <nav class='main_menu' data-selectname='Select a page'  role="navigation" itemscope="itemscope" itemtype="https://schema.org/SiteNavigationElement" >
                     <div class="avia-menu av-main-nav-wrap av_menu_icon_beside">
+                        <div class='header_lan' style="text-align:right;"><a href="/">Korean</a> | <a href="/eng">English</a></div>
                         <ul id="avia-menu" class="menu av-main-nav">
                             <li id="menu-item-333" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-top-level menu-item-top-level-2">
                                 <a href="/cooling.html" itemprop="url"><span class="avia-bullet"></span><span class="avia-menu-text">SmartBox</span><span class="avia-menu-fx"><span class="avia-arrow-wrap"><span class="avia-arrow"></span></span></span></a>
