--- a/visiting.html
+++ b/visiting.html
@@ -130,33 +130,33 @@
                                     <div class="flex_column av_one_fifth  flex_column_div av-zero-column-padding first  avia-builder-el-32  el_after_av_hr  el_before_av_three_fifth  " style='border-radius:0px; '></div>
                                     <div class="flex_column av_three_fifth  flex_column_div av-zero-column-padding   avia-builder-el-33  el_after_av_one_fifth  el_before_av_one_fifth  " style='border-radius:0px; '>
                                         <!-- <form action="https://script.google.com/a/databean.co.kr/macros/s/AKfycbxKoyPvHMO77RRh_tpb2qzKCZFmIjfbrBDcgqK7Yg/exec" method="post"  class="avia_ajax_form av-form-labels-visible   avia-builder-el-34  avia-builder-el-no-sibling  " data-avia-form-id="1" data-avia-redirect=''> -->
-                                        <form action="https://script.google.com/macros/s/AKfycbzWh1fbSqGkxPSm7pa_X9JvtGBvoUEDL_lvZvm1UegQW65A8-I/exec" method="post"  class="av-form-labels-visible avia-builder-el-40 avia-builder-el-no-sibling gform" data-avia-form-id="1" data-avia-redirect=''>
+                                        <form action="https://script.google.com/macros/s/AKfycbxXWeiNCN75ov9-RGldLtRJtfjyicvsS_79gI-SV5qO1ja8bcb5BoYVtwH-lmfXHeSk/exec" method="post"  class="av-form-labels-visible avia-builder-el-40 avia-builder-el-no-sibling gform" data-avia-form-id="1" data-avia-redirect=''>
                                             <fieldset>
                                                 <p class=' first_form  form_element form_element_half' id='element_avia_1_1'>
                                                     <label for="avia_1_1">성함 <abbr class="required" title="required">*</abbr></label>
-                                                    <input name="avia_1_1" class="text_input is_empty" type="text" id="avia_1_1" value="" />
+                                                    <input name="1.성함" class="text_input is_empty" type="text" id="avia_1_1" value="" required/>
                                                 </p>
                                                 <p class=' form_element form_element_half' id='element_avia_2_1'>
                                                     <label for="avia_2_1">회사명 <abbr class="required" title="required">*</abbr></label>
-                                                    <input name="avia_2_1" class="text_input is_empty" type="text" id="avia_2_1" value="" />
+                                                    <input name="2.회사명" class="text_input is_empty" type="text" id="avia_2_1" value="" />
                                                 </p>
                                                 <p class=' first_form  form_element form_fullwidth' id='element_avia_3_1'>
                                                     <label for="avia_3_1">이메일 <abbr class="required" title="required">*</abbr></label>
-                                                    <input name="avia_3_1" class="text_input is_email" type="text" id="avia_3_1" value="" />
+                                                    <input name="email" class="text_input is_email" type="text" id="email" value="" required/>
                                                 </p>
                                                 <p class=' first_form  form_element form_fullwidth' id='element_avia_4_1'>
                                                     <label for="avia_4_1">연락처 <abbr class="required" title="required">*</abbr></label>
-                                                    <input name="avia_4_1" class="text_input is_phone" type="text" id="avia_4_1" value="" />
+                                                    <input name="4.연락처" class="text_input is_phone" type="text" id="avia_4_1" value="" required/>
                                                 </p>
                                                 <p class=' first_form  form_element form_fullwidth' id='element_avia_5_1'>
                                                     <label for="avia_5_1">주소 <abbr class="required" title="required">*</abbr></label>
-                                                    <input name="avia_5_1" class="text_input is_address" type="text" id="avia_5_1" value="" />
+                                                    <input name="5.주소" class="text_input is_address" type="text" id="avia_5_1" value="" />
                                                 </p>
                                                 <p class=' first_form  form_element form_fullwidth av-last-visible-form-element' id='element_avia_6_1'>
                                                     <label for="avia_6_1" class="textare_label textare_label_avia_6_1">문의내용 <abbr class="required" title="required">*</abbr></label>
-                                                    <textarea  name="avia_6_1" class="text_area is_empty" cols="40" rows="7" id="avia_6_1" ></textarea>
+                                                    <textarea  name="6.문의내용" class="text_area is_empty" cols="40" rows="7" id="avia_6_1" ></textarea>
                                                 </p>
-                                                <p class="hidden"><input type="text" name="avia_7_1" class="hidden " id="avia_7_1" value="" /></p>
+                                                <!--<p class="hidden"><input type="text" name="avia_7_1" class="hidden " id="avia_7_1" value="" /></p>-->
                                                 <div>
                                                     <br>
                                                     <p style="text-align: center;"><strong> 개인정보 처리에 관한 동의서 </strong> </p>
@@ -171,14 +171,15 @@
                                                             </b>
                                                         </p>
                                                     </div>
-                                                    <input type="checkbox" name="agree" onClick="agreeCheck(this.form)"> 선택적 개인정보 수집 및 이용에 동의합니다.</input>
+                                                    <input type="checkbox" name="개인정보동의" onClick="agreeCheck(this.form)"> 선택적 개인정보 수집 및 이용에 동의합니다.</input>
                                                 </div>
                                                 <p class="form_element ">
-                                                    <input type="hidden" value="1" name="avia_generated_form1" />
-                                                    <input type="submit" id="checkButton" name="checkButton" value="신청하기" class="button"  data-sending-label="Sending" disabled/>
+                                                    <!--<input type="hidden" value="1" name="avia_generated_form1" />-->
+                                                    <input type="submit" id="checkButton" value="신청하기" class="button"  data-sending-label="Sending" disabled/>
                                                 </p>
                                             </fieldset>
                                         </form>
+                                        <iframe name="frAttachForm" style="display:none;"> </iframe>
                                         <div id="ajaxresponse_1" class="ajaxresponse ajaxresponse_1 hidden"></div>
                                     </div>
                                     <div class="flex_column av_one_fifth  flex_column_div av-zero-column-padding   avia-builder-el-35  el_after_av_three_fifth  avia-builder-el-last  " style='border-radius:0px; '></div>
@@ -195,6 +196,7 @@
                 </footer>
             </div>
         </div>
+        <script data-cfasync="false" type="text/javascript" src="https://cdn.rawgit.com/dwyl/html-form-send-email-via-google-script-without-server/master/form-submission-handler.js"></script>
         <script type='text/javascript'>
             /* <![CDATA[ */
             // var avia_framework_globals = avia_framework_globals || {};
