--- a/visiting.html
+++ b/visiting.html
@@ -149,7 +149,7 @@
                                                     <input name="4.연락처" class="text_input is_phone" type="text" id="avia_4_1" value="" required/>
                                                 </p>
                                                 <p class=' first_form  form_element form_fullwidth' id='element_avia_5_1'>
-                                                    <label for="avia_5_1">주소 <abbr class="required" title="required">*</abbr></label>
+                                                    <label for="avia_5_1">주소</label>
                                                     <input name="5.주소" class="text_input is_address" type="text" id="avia_5_1" value="" />
                                                 </p>
                                                 <p class=' first_form  form_element form_fullwidth av-last-visible-form-element' id='element_avia_6_1'>
@@ -227,6 +227,7 @@
         {
             if (frm.checkButton.disabled==true){
                 frm.checkButton.disabled=false;
+                alert("동의 처리가 완료되었습니다.");
             }
             else{
                 frm.checkButton.disabled=true
