--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <!-- mobile setting -->
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <!-- Scripts/CSS and wp_head hook -->
-        <title>DATABEAN &#8211; 'SmartBox' 데이터센터 서버 냉각기술의 혁신, 침지냉각 선도기업 &#124; 데이터빈</title>
+        <title>DATABEAN &#8211; 'SmartBox' 차세대 데이터센터 서버 냉각기술의 혁신, 이머전쿨링 선도기업 &#124; 데이터빈</title>
         <meta name="description" content="데이터빈은 국내 최초 침지냉각시스템(immersion cooling system) 'SmartBox'로 데이터센터 및 기업의 전산실 냉각 기술을 혁신합니다. [침지냉각, 액침냉각, 침수냉각, 몰입냉각, 지속가능한 냉각, 이머전쿨링, 액체냉각]">
         <meta property="og:title" content="DATABEAN &#8211; 'SmartBox' 데이터센터 서버 냉각기술의 혁신, 침지냉각 선도기업 &#124; 데이터빈">
         <meta property="og:description" content="데이터빈은 국내 최초 침지냉각시스템(immersion cooling system) 'SmartBox'로 데이터센터 및 기업의 전산실 냉각 기술을 혁신합니다. [침지냉각, 액침냉각, 침수냉각, 몰입냉각, 지속가능한 냉각, 이머전쿨링, 액체냉각]">
