--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <meta charset="UTF-8" />
         <script src="/includeHTML.js"></script>
         <meta name="robots" content="index, follow" />
+        <!-- NAVER SEARCH ENGINE -->
+        <meta name="naver-site-verification" content="5337beebad31f4bb4fb1e3374317b6df697d2149" />
         <!-- mobile setting -->
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <!-- Scripts/CSS and wp_head hook -->
